# notes

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: index.md  robots.txt
docs/assets/javascripts/: diagram_zoom.js  interactive_graph.js  obsidian_tags.js  pretext-editor-engine.mjs
docs/assets/stylesheets/: interactive_graph.css  mermaid_zoom.css  obsidian_tags.css  pretext-editor-engine.css
docs/markdown/COMP/4403/: index.md
docs/markdown/COMP/4403/Assignment/: Assignment1.md  Assignment2.md  index.md
docs/markdown/COMP/4403/Lectures/: BottomUpParsing.md  Foundations.md  InterpretationExecutionPL0.md  LexicalAnalysisParserTools.md  MemoryObjectRuntimeRepresentation.md  RuntimeSystemsProgramExecution.md  StaticSemanticsSemanticAnalysis.md  TopDownParsing.md  index.md
docs/markdown/COMP/4403/Tutorial/: Tutorial1.md  Tutorial2.md  Tutorial3.md  Tutorial4.md  Tutorial5.md  Tutorial6.md  Tutorial9.md  index.md
hooks/: mermaid_superfences.py
overrides/: main.html
overrides/partials/: actions.html
