[project]
name = "notes"
version = "0.1.0"
description = "notes of all my coursez"
authors = [
    {name = "Keys",email = "70819367+keys-i@users.noreply.github.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.13,<4"
dependencies = [
    "mkdocs (>=1.1.2)",
    "mkdocs-material (>=8.1.7)",
    "markdown-exec[ansi] (>=1.12.0,<2.0.0)",
    "mkdocs-roamlinks-plugin (>=0.1.3)",
    "mkdocs-mermaid2-plugin (>=1.2.3,<2.0.0)",
    "mkdocs-minify-plugin (>=0.8.0,<0.9.0)",
    "pymdown-extensions (>=10.7)",
    "python-markdown-math (>=0.9,<0.10)",
    "mkdocs-obsidian-interactive-graph-plugin (>=0.3.2,<0.4.0)",
    "mkdocs-callouts (>=1.16.0,<2.0.0)",
    "mkdocs-glightbox (>=0.5.2,<0.6.0)",
    "mkdocs-git-authors-plugin (>=0.10.0,<0.11.0)",
    "mkdocs-obsidian-bridge (>=1.3.1,<2.0.0)",
    "mkdocs-obsidian-support-plugin (>=1.4.1,<2.0.0)",
    "mkdocs-print-site-plugin (>=2.8,<3.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
